[project]
name = "pipelineforge-env"
version = "1.0.0"
description = "CI/CD Pipeline Optimizer RL Environment — OpenEnv compatible"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "pyyaml>=6.0.1",
    "openai>=1.30.0",
    "requests>=2.31.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/Latika2109/pipelineforge-env"
Repository = "https://github.com/Latika2109/PipelineForge"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
